# Research-Assistant

./: .dockerignore  Dockerfile  Dockerfile.frontend  docker-compose.yml  pyproject.toml
backend/: config.py  main.py
backend/agent/: graph.py  state.py  utils.py
backend/agent/nodes/: critic.py  planner.py  worker.py
backend/agent/tools/: __init__.py  read.py  search.py
backend/routers/: research.py
backend/scripts/: download_model.py
frontend/: app.py
