[project]
name = "research-assistant"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "fastapi>=0.136.1",
    "langchain-groq>=1.1.2",
    "langgraph>=1.1.10",
    "pydantic-settings>=2.14.0",
    "streamlit>=1.57.0",
    "tavily>=1.1.0",
    "uvicorn>=0.46.0",
]
