[project]
name = "research-assistant"
version = "0.1.0"
description = "Agentic Research Pipeline"
readme = "README.md"
requires-python = ">=3.13"

dependencies = [
    "python-dotenv>=1.0.0",
]

[dependency-groups]
backend = [
    "faiss-cpu>=1.13.2",
    "fastapi>=0.136.1",
    "fastembed>=0.8.0",
    "langchain-community>=0.4.1",
    "langchain-google-genai>=4.2.2",
    "langchain-groq>=1.1.2",
    "langgraph>=1.1.10",
    "pydantic-settings>=2.14.0",
    "tavily>=1.1.0",
    "uvicorn>=0.46.0",
]

frontend = [
    "streamlit>=1.57.0",
    "requests>=2.31.0",
]
